# whysynth

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.rst  TODO  config.h.ac  configure.ac
doc/: wavetable_guide
extra/: COPYING-patches  current_default_patches.WhySynth  more_K4_interpretations.WhySynth  version_20051005_patches.WhySynth  version_20051231_patches.WhySynth  version_20090608_patches.WhySynth
src/: Makefile.am  agran_oscillator.c  agran_oscillator.h  agran_tables.c  bitmap_about.xpm  bitmap_logo.xpm  common_data.c  common_data.h  dssp_event.c  dssp_event.h  dssp_synth.c  dssp_synth.h  effect_reverb.c  effect_reverb.h  effect_screverb.c  effects.c  effects.h  gtkknob.c  gtkknob.h  gui_callbacks.c  gui_callbacks.h  gui_data.c  gui_images.c  gui_images.h  gui_interface.c  gui_interface.h  gui_main.c  gui_main.h  minblep_oscillator.h  minblep_tables.c  padsynth.c  padsynth.h  patch_tables.c  sampleset.c  sampleset.h  wave_tables.c  wave_tables.h  whysynth.h  whysynth_data.c  whysynth_ports.c  (+6 more)
test/: Makefile.am  whysynth_voice_render_test.c
