## Process this file with automake to produce Makefile.in

SUBDIRS = src

EXTRA_DIST = \
	autogen.sh \
	config.h.ac \
	README.rst \
	doc/eg_shapes_falling_1.png \
	doc/eg_shapes_falling_2.png \
	doc/eg_shapes_rising_1.png \
	doc/eg_shapes_rising_2.png \
	doc/voice_block_diagram.png \
	doc/wavetable_guide \
	extra/COPYING-patches \
	extra/current_default_patches.WhySynth \
	extra/more_K4_interpretations.WhySynth \
	extra/version_20051005_patches.WhySynth \
	extra/version_20051231_patches.WhySynth \
	extra/version_20090608_patches.WhySynth \
	extra/version_20100922_patches.WhySynth \
	extra/version_20120903_patches.WhySynth \
	extra/whysynth-icon-32x32.png

#icondir = $(datadir)/icons/hicolor/32x32/apps
#dist_icon_DATA = extra/whysynth-icon-32x32.png

dist_pkgdata_DATA = \
	extra/current_default_patches.WhySynth \
	extra/more_K4_interpretations.WhySynth \
	extra/version_20051005_patches.WhySynth \
	extra/version_20051231_patches.WhySynth \
	extra/version_20090608_patches.WhySynth \
	extra/version_20100922_patches.WhySynth \
	extra/version_20120903_patches.WhySynth

AUTOMAKE_OPTIONS = foreign

